Changes to install docs with link fixes

--- a/calico-cloud/get-help/support.mdx
+++ b/calico-cloud/get-help/support.mdx
@@ -8,7 +8,7 @@ import IconUser from '/img/icons/user-icon.svg';
 
 ## Contact Support
 
-You can find solutions to many common problems by following our [troubleshooting checklist](../get-started/connect/checklist.mdx) or by consulting the [Tigera Help Center](https://www.tigera.io/calico-support/).
+You can find solutions to many common problems by following our [troubleshooting checklist](../get-started/checklist.mdx) or by consulting the [Tigera Help Center](https://www.tigera.io/calico-support/).
 
 For everything else, you can open a support ticket.
 
