--- a/calico-cloud/get-started/install-helm.mdx
+++ b/calico-cloud/get-started/install-helm.mdx
@@ -12,7 +12,7 @@ With Helm installations you can also set optional installation parameters to ena
 
 * You have an active Calico Cloud account. You can sign up for a 14-day free trial at [calicocloud.io](https://calicocloud.io).
 * You are signed in to the Calico Cloud Manager UI as a user with the **Owner**, **Admin**, or **DevOps** role.
-* You have at least one cluster that meets our [system requirements](requirements/system-requirements.mdx).
+* You have at least one cluster that meets our [system requirements](system-requirements.mdx).
 * You have kubectl access to the cluster.
 * You have installed Helm 3.0 or later on your workstation.
 
