--- a/calico-cloud_versioned_docs/version-20-1/get-started/connect-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/connect-cluster.mdx
@@ -27,7 +27,7 @@ Whether you’ve finished your {{prodname}} Trial, or terminated your licensed {
 - Switches the operator configuration to open-source Calico, which migrates your cluster to a version of open-source Calico
 - Ensures all Calico policies are migrated to the default tier, or allows you to remove all Calico policies
 
-For details of the migration script, see [Uninstall {{prodname}} from a cluster](../../operations/disconnect.mdx).
+For details of the migration script, see [Uninstall {{prodname}} from a cluster](../operations/disconnect.mdx).
 
 ## What happens under the covers when you connect your cluster
 
