--- a/calico-cloud_versioned_docs/version-20-1/get-started/install-automated.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/install-automated.mdx
@@ -47,7 +47,7 @@ These commands can be added to any automated workflow.
 ***Prerequisites***
 
 * You have generated a set of client credentials and you know the path to your secret.
-* You have at least one cluster that meets our [system requirements](requirements/system-requirements.mdx).
+* You have at least one cluster that meets our [system requirements](system-requirements.mdx).
 * You have kubectl access to the cluster.
 * You have installed Helm 3.0 or later on your workstation.
 
