--- a/calico-cloud_versioned_docs/version-20-1/get-started/install-private-registry.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/install-private-registry.mdx
@@ -11,7 +11,7 @@ You can perform a Helm installation from images stored on a private registry.
 
 * You have an active Calico Cloud account. You can sign up for a 14-day free trial at [calicocloud.io](https://calicocloud.io).
 * You are signed in to the Calico Cloud Manager UI as a user with the **Owner**, **Admin**, or **DevOps** role.
-* You have at least one cluster that meets our [system requirements](requirements/system-requirements.mdx).
+* You have at least one cluster that meets our [system requirements](system-requirements.mdx).
 * You have kubectl access to the cluster.
 * You have installed Helm 3.0 or later on your workstation.
 * You have [added the Calico Cloud images to a private registry](setup-private-registry.mdx), and you have the following information about the registry:
