--- a/calico-cloud_versioned_docs/version-20-1/get-started/operator-checklist.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/operator-checklist.mdx
@@ -19,7 +19,7 @@ Are you seeing any of these issues at the start of installation?
 
 ### [ERROR] Detected plugin ls: No such file or directory, it is currently not supported
 
-The cluster you are using to install {{prodname}} does not have a CNI plugin installed, the CNI is incompatible. If your cluster has functional pod networking and you see this message, it is likely that kubelet has been configured to use kubenet networking, which is not compatible with {{prodname}}. You can use a different cluster, or re-create your cluster with [compatible networking](requirements/system-requirements.mdx).
+The cluster you are using to install {{prodname}} does not have a CNI plugin installed, the CNI is incompatible. If your cluster has functional pod networking and you see this message, it is likely that kubelet has been configured to use kubenet networking, which is not compatible with {{prodname}}. You can use a different cluster, or re-create your cluster with [compatible networking](system-requirements.mdx).
 
 ### {{prodname}} cannot be connected to a cluster with FIPS mode enabled
 
@@ -60,7 +60,7 @@ If all components show a status of "Available" = TRUE, {{prodname}} is properly 
 
 :::note
 
-The `runtime-security` component is available only if [the container threat detection feature is enabled](../../threat/container-threat-detection.mdx#enable-container-threat-detection).
+The `runtime-security` component is available only if [the container threat detection feature is enabled](../threat/container-threat-detection.mdx#enable-container-threat-detection).
 
 :::note
 
@@ -388,7 +388,7 @@ default         99m
 The `runtime-security` custom resource will only be available if the container threat detection feature is enabled.
 :::note
 
-For more information on operator custom resources see the [Installation API reference](../../reference/installation/api.mdx).
+For more information on operator custom resources see the [Installation API reference](../reference/installation/api.mdx).
 
 ### Deep dive into custom resources
 
