--- a/calico-enterprise/visibility/visualize-traffic.mdx
+++ b/calico-enterprise/visibility/visualize-traffic.mdx
@@ -2,6 +2,8 @@
 description: Learn the power of network sets.
 ---
 
+import ImageCaption from "../../src/___new___/components/ImageCaption";
+
 # Network Visualization
 
 > From the left navbar, select **Service Graph**, **Default**
@@ -56,8 +58,8 @@ Here is an examples showing how services and endpoints are grouped under service
 with synthetic traffic data to showcase the service group feature and do not have any other value.
 
 ![service-groups](/img/calico-enterprise/service-graph/servicegroups.gif)
-*The image shows service graph in namespace view containing a node "\*", which is not representing a namespace but
-aggregation of service groups from different namespaces.*
+<ImageCaption>The image shows service graph in namespace view containing a node "*", which is not representing a namespace but
+    aggregation of service groups from different namespaces.</ImageCaption>
 
 
 **Logs, alerts, and capture jobs**
