Adds version support to RN

--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -30,6 +30,14 @@ This release adds support for Kubernetes 1.29.
 
 * The honeypods feature has been removed from this release.
 
+## Version support
+
+You can now install or upgrade to the following versions:
+
+* Calico Cloud 20
+* Calico CLoud 19
+* Calico Cloud 18
+
 <!--### Bug fixes-->
 
 ## July 23, 2024 (version 19.4.1)
