Note to system requirements, troubleshooting fix

--- a/calico-cloud_versioned_docs/version-20-1/get-started/system-requirements.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/system-requirements.mdx
@@ -78,7 +78,7 @@ To access the Manager UI web console, you can use latest two versions of the fol
 
   :::warning
 
-  If your cluster already has Calico installed by AKS and managed by AddonManager, the standard [uninstall](../../../operations/disconnect)
+  If your cluster already has Calico installed by AKS and managed by AddonManager, the standard [uninstall](../operations/disconnect.mdx)
   is not supported. You will need to reach out to support to create a plan to uninstall {{prodname}}.
 
   :::
