Fixes to CLoud typo

--- a/calico-cloud/get-started/install-automated.mdx
+++ b/calico-cloud/get-started/install-automated.mdx
@@ -42,7 +42,7 @@ When the key is deleted, all API requests based on that key will be rejected.
 
 ## About customizing your Helm installation
 
-You can customize your Calico CLoud installation for the following purposes:
+You can customize your Calico Cloud installation for the following purposes:
 
 * to enable or disable certain features
 * to modify pod scheduling and resource management
