--- a/calico-cloud/get-started/prepare-cluster.mdx
+++ b/calico-cloud/get-started/prepare-cluster.mdx
@@ -1,5 +1,5 @@
 ---
-description: Prepare your cluster to install Calico CLoud.
+description: Prepare your cluster to install Calico Cloud.
 ---
 
 # Prepare your cluster for Calico Cloud
@@ -41,7 +41,7 @@ Check that you are authorized to create the following Kubernetes resource types:
 
 ### Remove taints from Linux node pools
 
-If you have a hybrid clusters with both Windows and Linux nodes, the Linux nodes may have taints that prevent Calico CLoud from scheduling pods on those nodes.
+If you have a hybrid clusters with both Windows and Linux nodes, the Linux nodes may have taints that prevent Calico Cloud from scheduling pods on those nodes.
 These taints must be removed before you connect your cluster to Calico Cloud.
 
 You can check whether any node pools in your cluster have taints by running the following command:
