--- a/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-cluster.mdx
@@ -29,7 +29,7 @@ kubectl apply -f https://installer.calicocloud.io/manifests/cc-operator/latest/d
 1. From a terminal, paste and run the command.
 1. On the **Managed Clusters** page, you should immediately see your cluster in the list of managed clusters.
 Monitor the status under **Connection Status**.
-When the status changes to **Connected**, installation is complete and your cluster is connected to Calico CLoud.
+When the status changes to **Connected**, installation is complete and your cluster is connected to Calico Cloud.
 
 ## Additional resources
 
