--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -35,7 +35,7 @@ This release adds support for Kubernetes 1.29.
 You can now install or upgrade to the following versions:
 
 * Calico Cloud 20
-* Calico CLoud 19
+* Calico Cloud 19
 * Calico Cloud 18
 
 <!--### Bug fixes-->
