--- a/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-helm.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-helm.mdx
@@ -48,7 +48,7 @@ With Helm installations you can also set optional installation parameters to ena
 1. From a terminal, paste and run the command.
 1. On the **Managed Clusters** page, you should immediately see your cluster in the list of managed clusters.
    Monitor the status under **Connection Status**.
-   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico CLoud.
+   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico Cloud.
 
 ## Additional resources
 
