--- a/calico-cloud_versioned_docs/version-20-1/get-started/install-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/get-started/install-cluster.mdx
@@ -1,6 +1,6 @@
 ---
 description: Steps to connect your cluster to Calico Cloud.
-title: Install
+title: Install Calico Cloud
 ---
 
 # Connect a cluster to Calico Cloud
@@ -30,7 +30,7 @@ You can quickly connect a cluster to Calico Cloud by generating a unique kubectl
 1. From a terminal, paste and run the command.
 1. On the **Managed Clusters** page, you should immediately see your cluster in the list of managed clusters.
    Monitor the status under **Connection Status**.
-   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico CLoud.
+   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico Cloud.
 
 ## Connect a cluster to Calico Cloud with Helm
 
@@ -65,7 +65,7 @@ You can quickly connect a cluster to Calico Cloud by generating a unique kubectl
 1. From a terminal, paste and run the command.
 1. On the **Managed Clusters** page, you should immediately see your cluster in the list of managed clusters.
    Monitor the status under **Connection Status**.
-   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico CLoud.
+   When the status changes to **Connected**, installation is complete and your cluster is connected to Calico Cloud.
 
 ## Additional resources
 
