--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -5,15 +5,40 @@ title: Release notes
 
 # Calico Cloud release notes
 
-## September DD, 2024 (version 20.0.0)
+## September 10, 2024 (version 20.0.0)
 
 ### New features and enhancements
 
-#### Feature 1
+#### Helm customizations
 
-#### Feature 2
+We've added new options for customizing Helm installations:
 
-### Bug fixes
+* You can now enable or disable the Compliance and Packet Capture features at installation.
+* For many Calico Cloud components, you can specify node selectors, tolerations, and resource requests and limits.
+
+For more information, see [Connect a cluster to Calico Cloud](../get-started/install-cluster.mdx) and [Install Calico Cloud as part of an automated workflow](../get-started/install-automated.mdx)
+
+#### Support for ARM64
+
+This release adds support for clusters running on ARM64 architectures.
+
+#### Support for Kubernetes 1.30
+
+This release adds support for Kubernetes 1.30.
+
+## Deprecated and removed features
+
+* The honeypods feature has been removed from this release.
+
+## Version support
+
+You can now install or upgrade to the following versions:
+
+* Calico Cloud 20
+* Calico Cloud 19
+* Calico Cloud 18
+
+<!--### Bug fixes-->
 
 ## July 23, 2024 (version 19.4.1)
 
@@ -113,7 +138,7 @@ For more information, see [Install Calico Cloud as part of an automated workflow
 For Helm installations, you can now configure some feature options during installation.
 You can enable or disable Image Assurance, Container Threat Detection, and the Security Posture Dashboard by adding optional parameters to your Helm command.
 
-For more information, see [Connect a cluster to Calico Cloud using Helm](../get-started/install-helm.mdx).
+For more information, see [Connect a cluster to Calico Cloud](../get-started/install-cluster.mdx).
 
 #### Namespace exclusions for image scanning and runtime view
 
