Formatting fixes and version support updates

--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -26,11 +26,11 @@ This release adds support for clusters running on ARM64 architectures.
 
 This release adds support for Kubernetes 1.30.
 
-## Deprecated and removed features
+### Deprecated and removed features
 
 * The honeypods feature has been removed from this release.
 
-## Version support
+### Version support
 
 You can now install or upgrade to the following versions:
 
@@ -38,7 +38,9 @@ You can now install or upgrade to the following versions:
 * Calico Cloud 19
 * Calico Cloud 18
 
-<!--### Bug fixes-->
+Calico Cloud versions 17 and earlier are no longer supported.
+
+For information about upgrading, see [Upgrade Calico Cloud](../get-started/upgrade-cluster.mdx).
 
 ## July 23, 2024 (version 19.4.1)
 
