Document GoXXX config parameters.

--- a/calico/reference/resources/felixconfig.mdx
+++ b/calico/reference/resources/felixconfig.mdx
@@ -50,6 +50,9 @@ spec:
 | failsafeOutboundHostPorts          | UDP/TCP/SCTP protocol/port groupings that Felix will allow outgoing traffic from host endpoints to irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. The default value opens etcd's standard ports to ensure that Felix does not get cut off from etcd as well as allowing DHCP, DNS, BGP and the Kubernetes API. |                                                              | List of [ProtoPort](#protoport)         | <p><code>- net: "" <br/>&nbsp;&nbsp;protocol:  udp<br/>&nbsp;&nbsp;port: 53<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  udp<br/>&nbsp;&nbsp;port: 67<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 179<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 2379<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 2380<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 5473<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 6443<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 6666<br/>- net: "" <br/>&nbsp;&nbsp;protocol:  tcp<br/>&nbsp;&nbsp;port: 6667</code></p> |
 | featureDetectOverride              | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=". "true" or "false" will force the feature, empty or omitted values are auto-detected. | string                                                       | string                                  | `""`                                                         |
 | genericXDPEnabled                  | When enabled, Felix can fallback to the non-optimized `generic` XDP mode. This should only be used for testing since it doesn't improve performance over the non-XDP mode. | true,false                                                   | boolean                                 | `false`                                                      |
+| goGCThreshold                      | Sets the Go runtime's garbage collection threshold; this is the percentage that the heap is allowed to grow before GC is triggered.   In general, doubling the value halves the CPU timespent doing GC, but it also doubles peak GC memory overhead.  A special value of -1 can be used to disable GC entirely; this should only be used in conjunction with the `goMemoryLimitMB` setting.  This setting is overridden by the GOGC environment variable. | int                                                   | int                                 | `40`                                                      |
+| goMemoryLimitMB                    | GoMemoryLimitMB sets a (soft) memory limit for the Go runtime in MB.  The Go runtime will try to keep its memory usage under the limit by triggering GC as needed.  To avoid thrashing, it will exceed the limit if GC starts to take more than 50% of the process's CPU time.  A value of -1 disables the memory limit. Note that the memory limit, if used, must be considerably less than any hard resource limit set at the container or pod level.  This is because felix is not the only process that must run in the container or pod. This setting is overridden by the GOMEMLIMIT environment variable. | int                                                   | int                                 | `-1`                                                      |
+| goMaxProcs                         | Sets the maximum number of CPUs that the Go runtime will use concurrently.  A value of -1 means "use the system default"; typically the number of real CPUs on the system.  This setting is overridden by the GOMAXPROCS environment variable. | int | int | `-1` |
 | interfaceExclude                   | A comma-separated list of interface names that should be excluded when Felix is resolving host endpoints. The default value ensures that Felix ignores Kubernetes' internal `kube-ipvs0` device. If you want to exclude multiple interface names using a single value, the list supports regular expressions. For regular expressions you must wrap the value with `/`. For example having values `/^kube/,veth1` will exclude all interfaces that begin with `kube` and also the interface `veth1`. | string                                                       | string                                  | `kube-ipvs0`                                                 |
 | interfacePrefix                    | The interface name prefix that identifies workload endpoints and so distinguishes them from host endpoint interfaces. Note: in environments other than bare metal, the orchestrators configure this appropriately. For example our Kubernetes and Docker integrations set the 'cali' value, and our OpenStack integration sets the 'tap' value. | string                                                       | string                                  | `cali`                                                       |
 | ipipEnabled                        | Optional, you shouldn't need to change this setting as Felix calculates if IPIP should be enabled based on the existing IP Pools. When set, this overrides whether Felix should configure an IPinIP interface on the host. When explicitly disabled in FelixConfiguration, Felix will not clean up addresses from the `tunl0` interface (use this if you need to add addresses to that interface and don't want to have them removed). | `true`, `false`, unset                                       | optional boolean                        | unset                                                        |
