earlynetworkconfiguration reference page

--- a/calico-enterprise/networking/configuring/dual-tor.mdx
+++ b/calico-enterprise/networking/configuring/dual-tor.mdx
@@ -473,6 +473,7 @@ startup prior to receiving BGPPeer and BGPConfiguration resources from the datas
 EarlyNetworkingConfiguration will be superseded by any BGPPeer or BGPConfiguration
 resources after successful startup.
 
+For a full description of the EarlyNetworkingConfiguration resource, see [here](../../reference/resources/earlynetworkconfiguration.mdx)
 :::
 
 ### Arrange for dual-homed nodes to run {{nodecontainer}} on each boot
