Update to CC20 rn

--- a/calico-enterprise_versioned_docs/version-3.20-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/release-notes/index.mdx
@@ -39,6 +39,11 @@ To continue using these features, you must re-enable them during or after the up
 
 For more information, see [Packet capture](../visibility/packetcapture.mdx), [Enable compliance reports](../compliance/enable-compliance.mdx), and [Upgrade Calico Enterprise installed with Helm](../getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm#upgrade-from-313-or-later).
 
+### Automatic Calico Cloud access for connected IdP groups
+
+We made it easier for administrators to control access to Calico Cloud by managing users in their existing identity provider groups.
+When you add an identity provider, users who have memberships of one or more IdP Groups that have been enabled on Calico Cloud can log in without needing to be invited individually.
+
 ## Deprecated and removed features
 
 * The honeypods feature has been removed from this release.
