Update to CC20 release notes

--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -18,6 +18,11 @@ We've added new options for customizing Helm installations:
 
 For more information, see [Connect a cluster to Calico Cloud](../get-started/install-cluster.mdx) and [Install Calico Cloud as part of an automated workflow](../get-started/install-automated.mdx)
 
+#### Automatic Calico Cloud access for connected IdP groups
+
+We made it easier for administrators to control access to Calico Cloud by managing users in their existing identity provider groups.
+When you add an identity provider, users who have memberships of one or more IdP Groups that have been enabled on Calico Cloud can log in without needing to be invited individually.
+
 #### Support for ARM64
 
 This release adds support for clusters running on ARM64 architectures.
