--- a/calico-cloud/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud/image-assurance/understanding-scan-results.mdx
@@ -65,7 +65,7 @@ The scanning process also attaches EPSS and known exploit data onto each image a
 
 EPSS information can be found [here](https://www.first.org/epss/model).
 
-Known Exploits are based off of the [CISA KEV Catalog](https://www.cisa.gov/known-exploited-vulnerabilities-catalog): 
+Known Exploits are based off of the [CISA KEV Catalog](https://www.cisa.gov/known-exploited-vulnerabilities-catalog).
 
 ## Export results
 
